# interview-assignment

./: .gitignore  README.md  pyproject.toml
dlt_pipeline/: components.py  leads_to_duckdb.py
leads/: dbt_project.yml  profiles.yml
leads/models/gold/leads/: leads.sql  leads.yml
leads/models/silver/source_1_current/: source_1_current.sql  source_1_current.yml
leads/models/silver/source_2_current/: source_2_current.sql  source_2_current.yml
leads/models/silver/source_3_current/: source_3_current.sql  source_3_current.yml
leads/models/sources/: sources.yml
