[project]
name = "test-dlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.0",
    "dlt[duckdb,filesystem,gs]>=1.3.0",
    "pandas>=2.2.3",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.4",
    "pytest>=8.3.3",
]
